--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:entity-form": "node ../server/build/bin/scaffolding-entity-form.js $INIT_CWD ${npm_config_name}",
+    "generate:entity-nested-form": "node ../server/build/bin/scaffolding-entity-nested-form.js $INIT_CWD ${npm_config_name}"
   },
   "dependencies": {
     "react": "^18.2.0",
